@@ -3,8 +3,9 @@
 - Fix problems with MySqlDataAdapter insert command, when batch size is > 1, and 
   INSERT statement has expression with parentheses (e.g arithmetical expressions) (bug #54386)
 - When command is killed, e.g as result of timeout, error code returned from server 
-is not necessarily 1317 (QueryInterrupted). It might as well be 1028 (FileSortAborted).
-Fix timeout handling to handle both error codes in the same fashion (bug #53357)
+  is not necessarily 1317 (QueryInterrupted). It might as well be 1028 (FileSortAborted).
+  Fix timeout handling to handle both error codes in the same fashion (bug #53357)
+- added public MySqlHelper.ExecuteDataReader method that takes an external connection (bug #54570)
 
 Version 6.0.6
 - When sending file to server (LOAD DATA INFILE) open the file for read only, not for read/write
